--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,79 @@ html{
     font-size: 62.5%;
     scroll-behavior: smooth;  /* hace que el scroll de la pagina ocasionado por alguna accion (Ej. boton) se suave y evita los saltos abruptos */
 }
+
+body{
+    /* Con estas 5 lineas logro que no haya scroll en la página del home */
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    font-family: 'Roboto Mono', monospace;
+}
+
+/* Acá le quito los estilos por defecto a las etiquetas a */
+a{
+    text-decoration: none;
+    color: black;
+}
+
+/* Estilos del header */
+
+header{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    height: 14rem;
+}
+
+header .header-icons{
+    display: grid;
+    width: 100%;
+    height: 5rem;
+    background-color: #47cfac;
+}
+
+header .header-icons .icons-container{
+    display: flex;
+    justify-self: end;
+    align-items: center;
+    justify-content: space-between;
+    width: 30rem;
+    height: auto;
+    margin-right: 5rem;
+}
+
+header .header-icons .icons-container a{
+    width: 5rem;
+    text-align: center;
+}
+
+header .header-icons .icons-container a span{
+    color: white;
+}
+
+nav{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    height: 9rem;
+}
+
+nav .nav-logo-container{
+    margin-left: 5rem;
+}
+
+nav .nav-logo-container a img{
+    width: 22rem;
+}
+
+nav .nav-profile-container{
+    justify-self: end;
+    margin-right: 5rem;
+}
+
+nav .nav-profile-container a{
+    font-size: 2rem;
+    border-bottom: 0.1rem solid black;
+}
